--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         </activity>
         <activity android:name=".views.PatientActivity" />
         <activity android:name=".views.Terapuet_activity"></activity>
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="04326a3345540e9b8bbd4693dbf56ddea01e860e" />
     </application>
 
 </manifest>
