--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,13 @@ buildscript {
     
     repositories {
         google()
+        maven { url 'https://maven.fabric.io/public'}
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
         classpath 'com.google.gms:google-services:4.0.1'
+        classpath 'io.fabric.tools:gradle:1.25.4'
 
 
 
@@ -20,6 +22,7 @@ buildscript {
 allprojects {
     repositories {
         google()
+        maven { url 'https://maven.fabric.io/public'}
         jcenter()
     }
 }
