--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="e.android.sensmotion">
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".Notification.NotifikationChannels"
         android:allowBackup="true"
@@ -19,6 +20,7 @@
         </activity>
         <activity android:name=".views.PatientActivity" />
         <activity android:name=".views.Terapuet_activity"></activity>
+        <service android:name=".Notification.NotificationService"/>
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="04326a3345540e9b8bbd4693dbf56ddea01e860e" />
