--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "e.android.sensmotion"
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -54,6 +54,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.8'
     compile 'me.kaelaela:verticalviewpager:1.0.0@aar'
+    compile 'it.sephiroth.android.library.horizontallistview:hlistview:1.2.2'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
