--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,11 @@
         </activity>
         <activity android:name=".views.PatientActivity" />
         <activity android:name=".views.Terapuet_activity"></activity>
+        <receiver android:name=".Notification.AlarmLytter">
+            <intent-filter>
+                <action android:name="e.android.sensmotion.START_ALARM" />
+            </intent-filter>
+        </receiver>
         <service android:name=".Notification.NotificationService"/>
         <meta-data
             android:name="io.fabric.ApiKey"
