--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,8 +53,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.8'
-    compile 'me.kaelaela:verticalviewpager:1.0.0@aar'
-    compile 'it.sephiroth.android.library.horizontallistview:hlistview:1.2.2'
+    implementation 'me.kaelaela:verticalviewpager:1.0.0@aar'
+    implementation 'it.sephiroth.android.library.horizontallistview:hlistview:1.2.2'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
 }
 
