--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ repositories {
     }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-v4:26.1.0'
@@ -56,6 +56,7 @@ dependencies {
     implementation 'me.kaelaela:verticalviewpager:1.0.0@aar'
     implementation 'it.sephiroth.android.library.horizontallistview:hlistview:1.2.2'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support:support-v4:26.1.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
