--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
+    implementation 'com.github.jinatonic.confetti:confetti:1.1.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
