--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,16 +11,30 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".views.MainActivity">
+
+        <activity   android:name=".views.MainActivity"
+                android:configChanges="orientation"
+                android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".views.PatientActivity" />
-        <activity android:name=".views.Patient_setting_Activity"/>
-        <activity android:name=".views.Terapuet_activity"></activity>
+
+        <activity   android:name=".views.PatientActivity"
+                android:configChanges="orientation"
+                android:screenOrientation="portrait"/>
+
+        <activity   android:name=".views.Patient_setting_Activity"
+                android:configChanges="orientation"
+                android:screenOrientation="portrait"/>
+
+        <activity   android:name=".views.Terapuet_activity"
+                android:configChanges="orientation"
+                android:screenOrientation="portrait">
+        </activity>
+
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
         <receiver android:name=".Notification.PostNotifications">
             <intent-filter>
